# AI-Translate

./: README.es.md  README.zh.md  package-lock.json  package.json  pnpm-lock.yaml  vite.config.js
.github/workflows/: release.yml
src/: App.vue  AreaSelector.vue  area-selector.js
src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: app_state.rs  commands.rs  database.rs  http_client.rs  lib.rs  main.rs  ocr.rs  ocr_tasks.rs  shortcuts.rs  system_tray.rs  translation.rs
src-tauri/src/platform/: macos.rs  mod.rs  unsupported.rs  windows.rs
src-tauri/src/speech/: audio.rs  mod.rs  model_manager.rs  whisper.rs
src/components/: BottomToolbar.vue  CustomSelect.vue  HistoryModal.vue  HotkeyRecorder.vue  LanguageSelector.vue  ModelSelectorModal.vue  SettingsModal.vue  TextInput.vue  TitleBar.vue  TranslationResult.vue  VoiceSettingsModal.vue
